Moved the dateslider to top. Hack for F-TICKS whitespace bug.

--- a/site-media/css/flog-style.css
+++ b/site-media/css/flog-style.css
@@ -90,8 +90,8 @@ a, a:hover, a:visited {
 }
 
 div.rangeslider {
-    padding-top: 60px;
-    padding-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 70px;
 }
 
 div.graph {
